@@ -5,7 +5,7 @@ Change history for glaciers
 HIGHEST PRIORITY:
 
 HIGH PRIORITY:
-- revert change to names of time-based graphs made on 8/28/08
+- fix x-axis label in "glacial budget vs elevation" chart
 - bug: snowfall visualization doesn't draw properly on PowerPC Mac OS 10.4, rewrite to create atmosphere path directly
 - bug: loading full-size background image causes OutOfMemoryException, exceeds JVM heap space [crop svg, talk with Archie]
 - birds-eye view should half the slope of zoomed view so that 80km is at far right
@@ -76,6 +76,7 @@ CLEANUP:
 
 
 DONE:
+9/4/08 - revert change to names of time-based graphs made on 8/28/08
 8/28/08 - rename time-based graph classes and labels, should be "time vs ...", not "... vs time"
 8/28/08 - make "glacier length vs time" graph a strip chart that keeps 1000 years worth of data
 8/28/08 - draw valley floor for x<0 using Java 2D, to clean up snow/valley interface
